Fix article nav link spacing on mobile devices.

--- a/_assets/stylesheets/app.sass
+++ b/_assets/stylesheets/app.sass
@@ -171,6 +171,7 @@ a
 a.nav
   display: inline-block
   font-size: 1.2em
+  margin: 0 0 4px 0
   padding: 0.6em 0.8em
   border: 1px solid transparent
   color: #847864
